--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ydm+/zHNtyma6G2UNwEqRplDo4/YrxIHZAEj04rVN9w=
 APP_DEBUG=true
 APP_URL=http://localhost
 
